--- a/mono.toml
+++ b/mono.toml
@@ -107,6 +107,7 @@ disabled = false
 format = '\[[$symbol$type]($style)\]'
 
 [os.symbols]
+AIX = ""
 Alpaquita = ''
 Alpine = ''
 AlmaLinux = ''
@@ -136,6 +137,8 @@ Mint = ''
 NetBSD = ''
 NixOS = ''
 OpenBSD = ''
+OpenCloudOS = ''
+openEuler = ''
 openSUSE = ''
 OracleLinux = '󰌷'
 Pop = ''
@@ -147,6 +150,7 @@ Redox = '󰀘'
 Solus = '󰠳'
 SUSE = ''
 Ubuntu = ''
+Ultramarine = ''
 Unknown = ''
 Void = ''
 Windows = ''
