--- a/mono.toml
+++ b/mono.toml
@@ -17,6 +17,7 @@ $bun\
 $nodejs\
 $c\
 $cmake\
+$dart\
 $dotnet\
 $golang\
 $java\
@@ -77,6 +78,11 @@ version_format = '${raw}'
 [cmake]
 format = '\([$symbol$version]($style)\)'
 symbol = ''
+version_format = '${raw}'
+
+[dart]
+format = '\([$symbol$version]($style)\)'
+symbol = ''
 version_format = '${raw}'
 
 [dotnet]
