--- a/emoji.toml
+++ b/emoji.toml
@@ -24,6 +24,7 @@ $java\
 $kotlin\
 $lua\
 $nodejs\
+$package\
 $python\
 $rust\
 -)\
@@ -116,6 +117,11 @@ version_format = '${raw}'
 [nodejs]
 format = '\([$symbol$version]($style)\)'
 symbol = '🟩'
+version_format = '${raw}'
+
+[package]
+format = '\([$symbol$version]($style)\)'
+symbol = '📦'
 version_format = '${raw}'
 
 [python]
