--- a/mono.toml
+++ b/mono.toml
@@ -23,6 +23,8 @@ $gradle\
 $java\
 $kotlin\
 $nodejs\
+$lua\
+$package\
 $python\
 $rust\
 -)\
@@ -110,6 +112,11 @@ version_format = '${raw}'
 [lua]
 format = '\([$symbol$version]($style)\)'
 symbol = ''
+version_format = '${raw}'
+
+[package]
+format = '\([$symbol$version]($style)\)'
+symbol = ''
 version_format = '${raw}'
 
 [nodejs]
